# risc-v-challenge

./: .gitmodules  CMakeLists.txt  README.md
hardware/: README.md
src/: lv_conf.h  main.c
src/acrylic/: CMakeLists.txt  acrylic.c  acrylic.h
src/acrylic/synth/: envelope.c  envelope.h  filter.c  filter.h  limiter.c  limiter.h  oscillator.c  oscillator.h  synth.c  synth.h  util.c  util.h
